syntax = "proto3";

package api.crud;

import "google/protobuf/wrappers.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

option go_package = "crud";

enum ContactFieldNum {
  C_ID = 0;
  C_NAME = 1;
  C_PHONE = 2;
}

message Contact {
  // id записи
  google.protobuf.Int64Value id = 1;
  // имя
  google.protobuf.StringValue name = 2;
  // телефон
  google.protobuf.StringValue phone = 3;
}

message ListContactsRequest {
  // фильтры для отбора записей
  ListContactFilter filter = 1;
  // список названий полей, которые возвращать в ответе. Deprecated - не успел)
  repeated ContactFieldNum returnedFields = 2 [deprecated = true];
  // ограничение числа возвращаемых записей
  google.protobuf.Int32Value limit = 3;
}

message ListContactFilter {
  // список id
  repeated int64 ids = 1;
  // список имен
  repeated string names = 2;
  // список телефонов
  repeated string phones = 3;
}

message ListContactsResponse {
  // контакты
  repeated Contact contacts = 1;
}

message AddContactRequest {
  // имя
  google.protobuf.StringValue name = 1 [(validator.field) = {msg_exists : true}];
  // телефон
  google.protobuf.StringValue phone = 2 [(validator.field) = {msg_exists : true}];
}

message IsErr {
  // ошибка(если возникла)
  google.protobuf.StringValue err = 1;
}

message UpdateContactRequest {
  // id записи
  google.protobuf.Int64Value id = 1 [(validator.field) = {msg_exists : true}];
  // имя
  google.protobuf.StringValue name = 2;
  // телефон
  google.protobuf.StringValue phone = 3;
}

message DeleteContactRequest {
  // id записи
  google.protobuf.Int64Value id = 1 [(validator.field) = {msg_exists : true}];
}
