syntax = "proto3";

package api.crud;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

import "phonebook.proto";

option go_package = "crud";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Crud"
  }
};

// Контакты
service Contacts {
  rpc ListContacts (ListContactsRequest) returns (ListContactsResponse) {
    option (google.api.http) = { get: "/v1/contacts/list" };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      summary: "ListContacts"
      description: "Возвращаем список контактов"
    };
  }
}
